# CPM

./: .gitignore  CMakeLists.txt  CPM.cpp  CPM.h  Image.h  ImageIO.h  Stochastic.h  plot.cpp
imgs/: output_rgb
